--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "fideloper/proxy": "~3.3",
         "laralib/l5scaffold": "dev-master",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "nahidulhasan/html2pdf": "^1.3",
+        "spipu/html2pdf": "^5.2"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
